@@ -2,6 +2,7 @@
 v4.0-git
 --------
 
+[jan] Fix fatal error if the task form doesn't validate.
 [jan] Add recurring tasks (Request #2150).
 
 
